--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,6 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'nyc3'   # optional: defaults to us-east-1
+        AWS_S3_ENDPOINT: https://sfo2.digitaloceanspaces.com
         DEST_DIR: 'css'
         #SOURCE_DIR: 'public'      # optional: defaults to entire repository
